Correct background selector on mobile for geoportalxyz

--- a/src/components/backgroundselector/style/backgroundselector.less
+++ b/src/components/backgroundselector/style/backgroundselector.less
@@ -90,29 +90,6 @@
     .ga-pixelkarte-farbe {
       background-position: -210px center;
     }
-
-    &.ga-open {
-
-      .ga-swissimage {
-        .translate3d(0, -49px, 0);
-        -ms-transform: translateY(-49px); /* IE 9*/
-      }
-
-      .ga-pixelkarte-farbe {
-        .translate3d(0, -98px, 0);
-        -ms-transform: translateY(-98px); /* IE 9*/
-      }
-
-      .ga-pixelkarte-grau {
-        .translate3d(0, -147px, 0);
-        -ms-transform: translateY(-147px); /* IE 9*/
-      }
-
-      .ga-voidLayer {
-        .translate3d(0, -196px, 0);
-        -ms-transform: translateY(-196px); /* IE 9*/
-      }
-    }
   }
 
   &.ga-bg-desktop {
